name:                sbanert-github-io
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sbanert/sbanert.github.io
license:             BSD3
license-file:        LICENSE
author:              Sebastian Banert
maintainer:          banert@kth.se
copyright:           2019 Sebastian Banert
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable sbanert-github-io
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
